@@ -268,8 +268,4 @@ function create_preference_input($name,$value) {
 
 } // create_preference_input
 
-//not translation words
-_('Interface');
-_('Streaming');
-_('System');
 ?>
